src/app.css
@import 'tailwindcss';

@theme {
	--font-inter:
		'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
		'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
		'Segoe UI Symbol', 'Noto Color Emoji';
}

@utility bg-gradient-radial {
	background-image: radial-gradient(
		50% 50% at 50% 50%,
		rgba(30, 58, 138, 0.25) 0%,
		rgba(49, 46, 129, 0.05) 100%
	);
}

@layer base {
	html {
		scroll-behavior: smooth;
		font-family:
			'Nunito',
			ui-sans-serif,
			system-ui,
			-apple-system,
			BlinkMacSystemFont,
			'Segoe UI',
			Roboto,
			'Helvetica Neue',
			Arial,
			'Noto Sans',
			sans-serif,
			'Apple Color Emoji',
			'Segoe UI Emoji',
			'Segoe UI Symbol',
			'Noto Color Emoji';
	}

	section,
	:is(h1, h2, h3, h4, h5, h6)[id] {
		scroll-margin-top: 5rem;
	}
}

@media (prefers-reduced-motion: reduce) {
	*,
	*::before,
	*::after {
		animation-duration: 0.01ms !important;
		animation-iteration-count: 1 !important;
		transition-duration: 0.01ms !important;
		transition-delay: 0s !important;
		scroll-behavior: auto !important;
	}
}

